added placeholder project description/planning. Also begun implementing pii model

--- a/project.ipynb
+++ b/project.ipynb
@@ -21,8 +21,14 @@
    "id": "0b0f01cb",
    "metadata": {},
    "source": [
-    "step 1 \n",
-    "placeholder step description - load excel to df and start processing data"
+    "QA Project for World Bank Survey Dataset - World bank has compiled a survey asking specific questions to various federal banks across the country. This project will train a NLP generative model on the dataset and allow the user to ask questions related to the information in the data.\n",
+    "\n",
+    "Step 1 - load excel file into python\n",
+    "step 2 - process excel file into a NLP readable format - question:answer pairs\n",
+    "step 3 - PHASE 1 - run pii identifying model on dataset to clean it\n",
+    "step 4 - PHASE 2 - train NLP model (Google T5) on dataset\n",
+    "step 5 - test and finetune model\n",
+    "step 6 - upload model to azure"
    ]
   },
   {
@@ -168,10 +174,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eb74525",
+   "id": "ea5c8b57",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# install dependecies\n",
+    "# !pip install presidio_analyzer presidio_anonymizer\n",
+    "# !python -m spacy download en_core_web_lg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3eb74525",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "progress: 100%|██████████| 107833/107833 [36:18<00:00, 49.51it/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "from presidio_analyzer import AnalyzerEngine\n",
+    "from collections import defaultdict\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# initialize analyzer\n",
+    "analyzer = AnalyzerEngine()\n",
+    "\n",
+    "# initialize storage for pii\n",
+    "potentialPII = []\n",
+    "piiSummary = defaultdict(int)\n",
+    "\n",
+    "# iterate through every sample\n",
+    "for idx, sample in enumerate(tqdm(samples, desc=\"progress\")):\n",
+    "\n",
+    "    # get input question and target\n",
+    "    inputText = sample[\"input\"]\n",
+    "    targetText = sample[\"target\"]\n",
+    "\n",
+    "    # analyze input and target\n",
+    "    inputRes = analyzer.analyze(text=inputText, language='en')\n",
+    "    targetRes = analyzer.analyze(text=targetText, language='en')\n",
+    "\n",
+    "    # if pii is found\n",
+    "    if inputRes or targetRes:\n",
+    "\n",
+    "        # store results and append main list\n",
+    "        finding = {\n",
+    "            \"sampleIDX\": idx,\n",
+    "            \"input\": inputText,\n",
+    "            \"target\": targetText,\n",
+    "            \"inputPII\": [{\"type\": r.entity_type, \"text\": inputText[r.start:r.end], \"score\": r.score} for r in inputRes],\n",
+    "            \"targetPII\": [{\"type\": r.entity_type, \"text\": targetText[r.start:r.end], \"score\": r.score} for r in targetRes]\n",
+    "        }\n",
+    "        potentialPII.append(finding)\n",
+    "\n",
+    "# dump to file\n",
+    "import json\n",
+    "with open('potentialPII.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(potentialPII, f, indent=2, ensure_ascii=False)\n"
+   ]
   }
  ],
  "metadata": {
