added future steps. Also added code to exclude specific countries that are necessary for data from PII steps

--- a/project.ipynb
+++ b/project.ipynb
@@ -21,14 +21,21 @@
    "id": "0b0f01cb",
    "metadata": {},
    "source": [
-    "QA Project for World Bank Survey Dataset - World bank has compiled a survey asking specific questions to various federal banks across the country. This project will train a NLP generative model on the dataset and allow the user to ask questions related to the information in the data.\n",
+    "QA Project for World Bank Survey Dataset - World bank has compiled a survey asking specific financial questions to various federal banks across the globe. This project will train a NLP generative model on the dataset and allow the user to ask questions related to the information.  \n",
     "\n",
-    "Step 1 - load excel file into python\n",
-    "step 2 - process excel file into a NLP readable format - question:answer pairs\n",
-    "step 3 - PHASE 1 - run pii identifying model on dataset to clean it\n",
-    "step 4 - PHASE 2 - train NLP model (Google T5) on dataset\n",
-    "step 5 - test and finetune model\n",
-    "step 6 - upload model to azure"
+    "step 1 - load excel file into python  \n",
+    "step 2 - process excel file into a NLP readable format - question:answer pairs  \n",
+    "step 3 - PHASE 1 - run pii identifying model (microsoft presidio) on dataset to clean it  \n",
+    "step 4 - PHASE 2 - train NLP model (Google T5) on dataset  \n",
+    "step 5 - test and finetune model  \n",
+    "step 6 - upload model to azure  \n",
+    "\n",
+    "Future Steps:  \n",
+    "- PHASE 3  \n",
+    "    - get feedback on model performance (answer quality/hallucinations/knowledge gaps)  \n",
+    "    - add additional survey questions to knowledge base  \n",
+    "\n",
+    "CICD with versioning:"
    ]
   },
   {
@@ -185,18 +192,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3eb74525",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "progress: 100%|██████████| 107833/107833 [36:18<00:00, 49.51it/s] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from presidio_analyzer import AnalyzerEngine\n",
     "from collections import defaultdict\n",
@@ -204,6 +203,11 @@
     "\n",
     "# initialize analyzer\n",
     "analyzer = AnalyzerEngine()\n",
+    "\n",
+    "# specific countries and years are necessary to the survey data\n",
+    "# do not flag these as PII\n",
+    "excludeWords = set(countries)\n",
+    "excludeWords.update(['2011', '2012', '2013', '2014', '2015', '2016'])\n",
     "\n",
     "# initialize storage for pii\n",
     "potentialPII = []\n",
@@ -219,6 +223,10 @@
     "    # analyze input and target\n",
     "    inputRes = analyzer.analyze(text=inputText, language='en')\n",
     "    targetRes = analyzer.analyze(text=targetText, language='en')\n",
+    "\n",
+    "    # filter out exclude list from text matches\n",
+    "    inputRes = [r for r in inputRes if inputText[r.start:r.end] not in excludeWords] \n",
+    "    targetRes = [r for r in targetRes if targetText[r.start:r.end] not in excludeWords] \n",
     "\n",
     "    # if pii is found\n",
     "    if inputRes or targetRes:\n",
