updating documentations. attempting to fix exclude matching for pii model

--- a/project.ipynb
+++ b/project.ipynb
@@ -26,16 +26,18 @@
     "step 1 - load excel file into python  \n",
     "step 2 - process excel file into a NLP readable format - question:answer pairs  \n",
     "step 3 - PHASE 1 - run pii identifying model (microsoft presidio) on dataset to clean it  \n",
-    "step 4 - PHASE 2 - train NLP model (Google T5) on dataset  \n",
+    "step 4 - PHASE 2 - train NLP model (Google T5 via pyTorch) on dataset  \n",
     "step 5 - test and finetune model  \n",
     "step 6 - upload model to azure  \n",
     "\n",
     "Future Steps:  \n",
-    "- PHASE 3  \n",
+    "- PHASE 3\n",
+    "    - implement API for interacting with model\n",
+    "    - add some sort of sentiment analysis to clasify questions/answers (financial questions, admin questions, etc)\n",
     "    - get feedback on model performance (answer quality/hallucinations/knowledge gaps)  \n",
     "    - add additional survey questions to knowledge base  \n",
     "\n",
-    "CICD with versioning:"
+    "CICD: GitHub"
    ]
   },
   {
@@ -195,7 +197,43 @@
    "execution_count": null,
    "id": "3eb74525",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample of exclude words: ['Spain', 'Comoros', 'Latvia', 'Lesotho', 'Jersey', 'Romania', 'Canada', 'Australia', 'Singapore', 'Cayman Islands']\n",
+      "Total words in exclude list: 167\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "progress:   0%|          | 8/107833 [00:00<39:18, 45.72it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Detected in sample 2:\n",
+      "  Input: 'Antigua' (type: LOCATION)\n",
+      "  Input: 'Barbuda' (type: LOCATION)\n",
+      "\n",
+      "Detected in sample 8:\n",
+      "  Target: 'the Republic of Azerbaijan' (type: LOCATION)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from presidio_analyzer import AnalyzerEngine\n",
     "from collections import defaultdict\n",
@@ -208,6 +246,9 @@
     "# do not flag these as PII\n",
     "excludeWords = set(countries)\n",
     "excludeWords.update(['2011', '2012', '2013', '2014', '2015', '2016'])\n",
+    "\n",
+    "print(\"Sample of exclude words:\", list(excludeWords)[:10])\n",
+    "print(\"Total words in exclude list:\", len(excludeWords))\n",
     "\n",
     "# initialize storage for pii\n",
     "potentialPII = []\n",
@@ -225,8 +266,19 @@
     "    targetRes = analyzer.analyze(text=targetText, language='en')\n",
     "\n",
     "    # filter out exclude list from text matches\n",
-    "    inputRes = [r for r in inputRes if inputText[r.start:r.end] not in excludeWords] \n",
+    "    inputRes = [r for r in inputRes if not any(inputText[r.start:r.end] in word or word in inputText[r.start:r.end] for word in excludeWords)] \n",
     "    targetRes = [r for r in targetRes if targetText[r.start:r.end] not in excludeWords] \n",
+    "\n",
+    "    if inputRes or targetRes:\n",
+    "        print(f\"\\nDetected in sample {idx}:\")\n",
+    "        for r in inputRes:\n",
+    "            print(f\"  Input: '{inputText[r.start:r.end]}' (type: {r.entity_type})\")\n",
+    "        for r in targetRes:\n",
+    "            print(f\"  Target: '{targetText[r.start:r.end]}' (type: {r.entity_type})\")\n",
+    "        \n",
+    "        if idx > 5:  # Just check first few samples\n",
+    "            break\n",
+    "\n",
     "\n",
     "    # if pii is found\n",
     "    if inputRes or targetRes:\n",
