updated pii code
made simpler and added set to prevent duplicates. added model confidence pii requirement. begun t5 model implementation

--- a/project.ipynb
+++ b/project.ipynb
@@ -160,13 +160,7 @@
     "            }\n",
     "\n",
     "            # append sample to list\n",
-    "            samples.append(sample)\n",
-    "\n",
-    "\n",
-    "#testing dump all samples to file to verify\n",
-    "import json\n",
-    "with open('training_samples.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(samples, f, indent=2, ensure_ascii=False)\n"
+    "            samples.append(sample)"
    ]
   },
   {
@@ -199,45 +193,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample of exclude words: ['Spain', 'Comoros', 'Latvia', 'Lesotho', 'Jersey', 'Romania', 'Canada', 'Australia', 'Singapore', 'Cayman Islands']\n",
-      "Total words in exclude list: 167\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "progress:   0%|          | 8/107833 [00:00<39:18, 45.72it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Detected in sample 2:\n",
-      "  Input: 'Antigua' (type: LOCATION)\n",
-      "  Input: 'Barbuda' (type: LOCATION)\n",
-      "\n",
-      "Detected in sample 8:\n",
-      "  Target: 'the Republic of Azerbaijan' (type: LOCATION)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "finding pii: 100%|██████████| 107833/107833 [35:25<00:00, 50.73it/s] \n"
      ]
     }
    ],
    "source": [
     "from presidio_analyzer import AnalyzerEngine\n",
-    "from collections import defaultdict\n",
     "from tqdm import tqdm\n",
+    "import json\n",
     "\n",
     "# initialize analyzer\n",
     "analyzer = AnalyzerEngine()\n",
@@ -247,15 +213,17 @@
     "excludeWords = set(countries)\n",
     "excludeWords.update(['2011', '2012', '2013', '2014', '2015', '2016'])\n",
     "\n",
-    "print(\"Sample of exclude words:\", list(excludeWords)[:10])\n",
-    "print(\"Total words in exclude list:\", len(excludeWords))\n",
+    "# only include entries that the model has 70%+ confidnece is PII\n",
+    "CONFIDENCE = 0.7\n",
     "\n",
-    "# initialize storage for pii\n",
+    "# only track unique PII values\n",
+    "seenPII = set()\n",
+    "\n",
+    "# storage for PII\n",
     "potentialPII = []\n",
-    "piiSummary = defaultdict(int)\n",
     "\n",
     "# iterate through every sample\n",
-    "for idx, sample in enumerate(tqdm(samples, desc=\"progress\")):\n",
+    "for idx, sample in enumerate(tqdm(samples, desc='finding pii')):\n",
     "\n",
     "    # get input question and target\n",
     "    inputText = sample[\"input\"]\n",
@@ -266,37 +234,95 @@
     "    targetRes = analyzer.analyze(text=targetText, language='en')\n",
     "\n",
     "    # filter out exclude list from text matches\n",
-    "    inputRes = [r for r in inputRes if not any(inputText[r.start:r.end] in word or word in inputText[r.start:r.end] for word in excludeWords)] \n",
-    "    targetRes = [r for r in targetRes if targetText[r.start:r.end] not in excludeWords] \n",
-    "\n",
-    "    if inputRes or targetRes:\n",
-    "        print(f\"\\nDetected in sample {idx}:\")\n",
-    "        for r in inputRes:\n",
-    "            print(f\"  Input: '{inputText[r.start:r.end]}' (type: {r.entity_type})\")\n",
-    "        for r in targetRes:\n",
-    "            print(f\"  Target: '{targetText[r.start:r.end]}' (type: {r.entity_type})\")\n",
-    "        \n",
-    "        if idx > 5:  # Just check first few samples\n",
-    "            break\n",
-    "\n",
+    "    inputRes = [r for r in inputRes \n",
+    "                if r.score >= CONFIDENCE\n",
+    "                and not any(inputText[r.start:r.end] in word or word in inputText[r.start:r.end] for word in excludeWords)] \n",
+    "    targetRes = [r for r in targetRes \n",
+    "                 if r.score >= CONFIDENCE \n",
+    "                 and not any(targetText[r.start:r.end] in word or word in targetText[r.start:r.end] for word in excludeWords)]\n",
     "\n",
     "    # if pii is found\n",
-    "    if inputRes or targetRes:\n",
+    "    isNewPII = False\n",
+    "    for r in inputRes:\n",
+    "        if inputText[r.start:r.end] not in seenPII:\n",
+    "            isNewPII = True\n",
+    "            seenPII.add(inputText[r.start:r.end])\n",
+    "    for r in targetRes:\n",
+    "        if targetText[r.start:r.end] not in seenPII:\n",
+    "            isNewPII = True\n",
+    "            seenPII.add(targetText[r.start:r.end])\n",
     "\n",
-    "        # store results and append main list\n",
-    "        finding = {\n",
-    "            \"sampleIDX\": idx,\n",
+    "    if isNewPII:\n",
+    "        res = {\n",
     "            \"input\": inputText,\n",
     "            \"target\": targetText,\n",
     "            \"inputPII\": [{\"type\": r.entity_type, \"text\": inputText[r.start:r.end], \"score\": r.score} for r in inputRes],\n",
     "            \"targetPII\": [{\"type\": r.entity_type, \"text\": targetText[r.start:r.end], \"score\": r.score} for r in targetRes]\n",
     "        }\n",
-    "        potentialPII.append(finding)\n",
+    "        potentialPII.append(res)\n",
     "\n",
-    "# dump to file\n",
-    "import json\n",
+    "# dump all potential flagged PII into a json file\n",
     "with open('potentialPII.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(potentialPII, f, indent=2, ensure_ascii=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4aa1d82",
+   "metadata": {},
+   "source": [
+    "potentiallyPII.json can now be reviewed for false positives  \n",
+    "since all of the flagged keywords are necessary for context, data does not need to be modified and T5 training can now begin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca4c42d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# install dependencies\n",
+    "# !pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128\n",
+    "# !pip install transformers datasets accelerate\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5912e8e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import (\n",
+    "    AutoTokenizer, \n",
+    "    AutoModelForSeq2SeqLM, \n",
+    "    Seq2SeqTrainer, \n",
+    "    Seq2SeqTrainingArguments, \n",
+    "    DataCollatorForSeq2Seq\n",
+    ")\n",
+    "from datasets import Dataset\n",
+    "import torch\n",
+    "import json\n",
+    "\n",
+    "# convert existing data to hugging face dataset\n",
+    "data = Dataset.from_list(samples)\n",
+    "\n",
+    "# load the pretrained t5 tokenizer and model\n",
+    "modelName = \"google/flan-t5-base\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(modelName)\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(modelName)\n",
+    "\n",
+    "# max_length is max number of tokens allowed\n",
+    "# T5-base handles max of 512\n",
+    "# truncate inputs if necessary\n",
+    "# padding is added later\n",
+    "modelInputs = tokenizer(\n",
+    "    data[\"input\"],\n",
+    "    max_length=512,\n",
+    "    truncation=True,\n",
+    "    padding=False\n",
+    ")"
    ]
   }
  ],
