documentation updates and code cleanup

--- a/project.ipynb
+++ b/project.ipynb
@@ -49,6 +49,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bbde085f",
+   "metadata": {},
+   "source": [
+    "##### Phase 1 - Data Processing \n",
+    "First, we need to download the data we will be using from World Bank's database."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d1dfe9f7",
@@ -258,7 +267,7 @@
     "                 if r.score >= CONFIDENCE \n",
     "                 and not any(targetText[r.start:r.end] in word or word in targetText[r.start:r.end] for word in excludeWords)]\n",
     "\n",
-    "    # if pii is found\n",
+    "    # if pii is found, add it to seen set\n",
     "    isNewPII = False\n",
     "    for r in inputRes:\n",
     "        if inputText[r.start:r.end] not in seenPII:\n",
@@ -269,6 +278,7 @@
     "            isNewPII = True\n",
     "            seenPII.add(targetText[r.start:r.end])\n",
     "\n",
+    "    # if it's the first time seeing this PII keyword, append it to the overall list\n",
     "    if isNewPII:\n",
     "        res = {\n",
     "            \"input\": inputText,\n",
@@ -292,15 +302,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e6da35b",
+   "metadata": {},
+   "source": [
+    "##### Phase 2 - Model Development & Fine Tuning\n",
+    "First, we need to install the necessary dependencies for model training."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ca4c42d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install dependencies\n",
-    "# !pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128\n",
-    "# !pip install transformers datasets accelerate\n"
+    "# install dependencies - this specific command install torch for windows bundled with cuda 12.8\n",
+    "!pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128\n",
+    "!pip install transformers datasets accelerate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f697b58",
+   "metadata": {},
+   "source": [
+    "Now, we can begin training the FLAN-T5-SMALL model."
    ]
   },
   {
@@ -474,7 +501,7 @@
    "id": "732dc213",
    "metadata": {},
    "source": [
-    "Now that the model is fine-tuned on the initial dataset, it can be locally queried to it correctly provides predictions."
+    "Now that the model is fine-tuned on the initial dataset, it can be locally queried to check if it correctly provides predictions."
    ]
   },
   {
@@ -538,7 +565,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# log in to huggingface\n",
+    "# log in to huggingface \n",
     "# you may need to run the authentication command directly in your terminal \n",
     "!pip install huggingface_hub\n",
     "!hf auth login"
@@ -582,7 +609,7 @@
    "id": "80e46298",
    "metadata": {},
    "source": [
-    "The model can also be queried through API calls when deployed on a cloud server like Google Cloud Platform, Amazon Web Services, or Microsft Azure. In this project, I will be using Azure to demostrate endpoint deployement."
+    "The model can also be queried through API calls when deployed on a cloud server like Google Cloud Platform, Amazon Web Services, or Microsoft Azure. In this project, I will be using Azure to demonstrate endpoint deployment."
    ]
   },
   {
@@ -918,7 +945,8 @@
     "questions = {\n",
     "    \"inputs\": [\n",
     "        \"What body/agency grants banking licenses in the United States?\",\n",
-    "        \"What is the minimum capital requirement in France?\"\n",
+    "        \"What is the minimum capital requirement in France?\",\n",
+    "        \"Who regulates banks in Japan?\"\n",
     "    ]\n",
     "}\n",
     "\n",
